# decBRL-cpp

./: .gitignore  CMakeLists.txt  Doxyfile.in  FindMatlab.cmake  FindProtocolBuffers.cmake  README.md  _non_central_t_8h.html  _non_central_t_8h_source.html  _normal_gamma_8h.html  _normal_gamma_8h_source.html  _random_policy_8h_source.html  _simple_m_d_p_8h_source.html  annotated.html  classdec__brl_1_1dist_1_1_non_central_t-members.html  classdec__brl_1_1dist_1_1_non_central_t.html  classdec__brl_1_1dist_1_1_non_central_t___tmpl-members.html  classdec__brl_1_1dist_1_1_non_central_t___tmpl.html  classdec__brl_1_1dist_1_1_non_central_t_random___tmpl-members.html  classdec__brl_1_1dist_1_1_non_central_t_random___tmpl.html  classdec__brl_1_1dist_1_1_normal_gamma-members.html  classdec__brl_1_1dist_1_1_normal_gamma.html  classdec__brl_1_1dist_1_1_normal_gamma___tmpl-members.html  classdec__brl_1_1dist_1_1_normal_gamma___tmpl.html  classes.html  classmdp__sim_1_1_random_policy-members.html  classmdp__sim_1_1_random_policy.html  classmdp__sim_1_1_simple_m_d_p-members.html  classmdp__sim_1_1_simple_m_d_p.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  formula.repository  functions.html  functions_func.html  functions_type.html  functions_vars.html  index.html  mainpage_8h.html  mainpage_8h_source.html  namespaceboost.html  (+11 more)
include/: NonCentralT.h  NormalGamma.h  RandomPolicy.h  SimpleMDP.h  decQLearner.cpp  mainpage.h  random.h  util.h  vpi.h
include/dec_brl/: BoostCompatibleArray.h  DecBayesModelLearner.h  DecBayesQ.h  DecQLearner.h  DecRandomPolicy.h  Dirichlet.h  EigenIterator.h  EigenIteratorPlugin.h  EigenWithPlugin.h  FactoredMDP.h  LearnerBase.h  LearningSolver.h  NonCentralT.h  NormalGamma.h  ProtoReader.h  ProtoRecorder.h  RandomPolicy.h  SimpleMDP.h  TransBelief.h  TransProb.h  exceptions.h  random.h  special.h  util.h  vpi.h
include/polygamma/: README.txt  polygamma.h
matlab/: readResults.cpp
proto/: Experiment.proto  ProtoMDP.proto  Results.proto
python/: readExp.py  readMDP.py  testExp.py  testMDP.py
search/: all_61.js  all_62.js  all_64.js  all_69.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_74.js  all_76.js  classes_6e.js  classes_73.js  files_6e.js  files_76.js  functions_61.js  functions_62.js  functions_63.js  functions_64.js  functions_67.js  functions_6c.js  functions_6d.js  functions_6e.js  functions_73.js  functions_74.js  functions_76.js  namespaces_64.js  namespaces_6d.js  search.js  typedefs_6e.js  typedefs_70.js  typedefs_76.js  variables_64.js
src/: SimpleMDP.cpp  decBRLSimulator.cpp  printResultFile.cpp  random.cpp
src/dec_brl/: TransBelief.cpp  random.cpp
src/polygamma/: README.txt  digamma.cpp  trigamma.cpp
src/proto/: ProtoReader.cpp  ProtoRecorder.cpp
test_data/: test.exp  test.mdp
tests/: BoostArrayHarness.cpp  DirichletHarness.cpp  TransBeliefHarness.cpp  bmFacMDPHarness.cpp  bmMDPHarness.cpp  bqFacMDPHarness.cpp  bqMDPHarness.cpp  colourHarness.cpp  facMDPHarness.cpp  mdpHarness.cpp  specialHarness.cpp  vecHarness.cpp  vpiHarness.cpp
